fixes About sidebar background size and position. Moves social icons into content div so there is no overlap on smaller screens.

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -52,44 +52,42 @@ img
   top: 0
   right: 0
 
-  a.about-link
-    position: relative
-    margin-top: 35px
-    text-decoration: none
-
-    h1
-      font-size: 16px
-      font-family: 'Exo 2', sans-serif
-      color: rgba( 255, 255, 255, .45 )
-      font-weight: bold
-      text-transform: uppercase
-      margin-top: 10px
-      padding-left: 80px
-      padding-top: 30px
-
-      &:before
-        content: ""
-        background: url(../images/left-arrow-white.png) no-repeat center bottom
-        opacity: .4
-        height: 37px
-        width: 37px
-        display: block
-        background-size: 37px 37px
-        position: absolute
-        left: 25px
-        top: 50%
-
 
   .about-inner
     background: #3e9ac7 url(../images/don-sidebar.png) no-repeat center bottom
     background-blend-mode: soft-light
     background-size: cover
-    background-position: right 24px center
-    margin-top: 112px
+    background-position: right 24px bottom -150px
     width: 100%
     height: 100%
     overflow: hidden
     position: relative
+
+    a.about-link
+      position: absolute
+      text-decoration: none
+
+      h1
+        font-size: 16px
+        font-family: 'Exo 2', sans-serif
+        color: rgba( 255, 255, 255, .45 )
+        font-weight: bold
+        text-transform: uppercase
+        margin-top: 10px
+        padding-left: 80px
+        padding-top: 30px
+
+        &:before
+          content: ""
+          background: url(../images/left-arrow-white.png) no-repeat center bottom
+          opacity: .4
+          height: 37px
+          width: 37px
+          display: block
+          background-size: 37px 37px
+          position: absolute
+          left: 25px
+          top: 50%
 
 .about-overlay
   position: fixed
@@ -181,13 +179,6 @@ img
           transform: rotate(-45deg)
           -webkit-transform: rotate(-45deg)
 
-    .about-social-icons
-      padding: 40px 50px 0 0px
-
-      a
-        margin-right: 10px
-        color: #66777e
-
     .about-text
       padding: 30px 50px 0 0px
       overflow-y: scroll
@@ -196,6 +187,13 @@ img
       font-family: "Myriad Pro"
       color: rgb(76, 94, 100)
       line-height: 1.563
+
+      .about-social-icons
+        padding-bottom: 15px
+
+        a
+          margin-right: 10px
+          color: #66777e
 
       h3
         font-size: 16px
